Prevent info pane overlapping GitHub icon

--- a/src/main/styles/neo4jd3.scss
+++ b/src/main/styles/neo4jd3.scss
@@ -105,6 +105,7 @@ button:hover {
     font-size: 16px;
     padding: 10px;
     position: absolute;
+    margin-right: 50px;
 
     a {
         border: 1px solid;
